# traktor-tsi-re

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  format-notes.md
examples/: README.md  sample.json
src/traktor_tsi/: __init__.py  beio.py  cli.py  enums.py  exceptions.py  frames.py  midi.py  models.py  parser.py  validators.py  xml.py
tests/: conftest.py  test_dump_sample_to_examples.py  test_parser_minimal.py
